# releaser

./: RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
releaser/: cli.py  io.py  project.py  versions.py
tests/: test_releaser.py
