[tool.poetry]
name = "releaser"
version = "2022.5.0"
description = ""
authors = ["Piper McCorkle <piper@lutris.engineering>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
GitPython = "^3.1.37"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
releaser = 'releaser.cli:releaser'
